# nvp-labs

./: .gitignore
Docs/: FooBar.nb  FooBar2.nb
Docs/Gas/: Gas.tex
Docs/Gas/fig/: Makefile  gas-0.eps  gas-1.eps  gas-2.eps
include/osx/: mathlink.h
include/unix/: mathlink.h
lab1/core/: Makefile  advsolver.cpp  advsolver.h  coeff.h  gd.h  gdsolver.cpp  gdsolver.h  linalg.cpp  linalg.h  riemann.cpp  riemann.h  solver.h  weno.cpp
lab1/docs/: FooBar.nb  FooBar2.nb
lab1/docs/Gas/: Gas.tex
lab1/gui/: LabExtra.nb  LabHyperbolic.nb  Unix_x86-64
lab1/lib/: ml32i3.def
lab1/mlink/: Makefile  Makefile.win32  gate.h  mprep.win
lab1/mlink/win/: header.win  mathlink.h  trailer.win
lab1/release/: Hyperbolic.nb  Makefile
lab2/core/: Makefile  advsolver.cpp  array.h  coeff.h  gdsolver.cpp  gdsolver.h  heatsolver.cpp  heatsolver.h  linalg.h  matrix.h  riemann.cpp  solver.h
lab2/docs/: FooBar2.nb  SelfSimilar.tex
lab2/docs/Gas/fig/: gas-0.eps  gas-1.eps  gas.mp
lab2/docs/Heat/: Heat.tex
lab2/docs/Heat/fig/: gas-2.eps
lab2/gui/: LabParabolic.nb
lab2/mlink/: HeatLink.tm  Makefile  gate.cpp  gate.h
lab2/release/: Makefile
lab3/: CMakeLists.txt  Compiler.cpp  Container.h  Lexer.h  Makefile  Polygon.cpp  Reg.h  Simplex.cpp  Simplex.h  Value.h  annulus.geom  config.rl  config.yy  creepy.geom  exprwrap.cpp  exprwrap.h  main.cpp  pacman.geom  sample.geom  square.geom  vtk.cpp  vtk.h
lab3/cmake/: FindRAGEL.cmake  linux-i686.cmake  macos-x86_64.cmake  windows-i686.cmake  windows-x86_64.cmake
lab3/delaunay/: CMakeLists.txt  delaunay2.h
lab3/doc/: .gitignore  description.tex  ellipt.tex
lab3/exprtk/: exprtk.hpp
lab3/release/: build.sh
lib/: ml64i3.def
mlink/: GasLink.tm  Makefile  Makefile.win32  gate.cpp  gate.h
release/: Hyperbolic.nb  Makefile
src/: Makefile  advsolver.cpp  array.h  coeff.h  cycledarray.cpp  cycledarray.h  gas.cpp  gd.h  gdsolver.cpp  gdsolver.h  grid.cpp  grid.h  linalg.cpp  linalg.h  main.cpp  main.h  matrix.cpp  matrix.h  riemann.cpp  riemann.h  schemes.cpp  schemes.h  solver.cpp  solver.h
widgets/: AllInOne.nb  AnalyzeScheme.nb  CalculateSchemes.nb  Driver.nb  LabHyperbolic.nb  StencilBox.nb  StepsBox.nb
